updated option handling, parttime & timespan comparison ops

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(as.character,partial_time)
 S3method(as.data.frame,partial_time)
 S3method(as.double,partial_time)
 S3method(as.logical,partial_time_logical)
+S3method(as.matrix,partial_time)
 S3method(as.timespan,default)
 S3method(c,partial_time)
 S3method(definitely,partial_time_logical)
@@ -22,6 +23,7 @@ S3method(format,pillar_shaft_timespan)
 S3method(format,timespan)
 S3method(impute_time,POSIXt)
 S3method(impute_time,default)
+S3method(impute_time,matrix)
 S3method(impute_time,partial_time)
 S3method(includes,partial_time.partial_time)
 S3method(is.na,partial_time)
