--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 BugReports: https://www.github.com/dgkf/parttime/issues
+Remotes: 
+    git::https://github.com/r-lib/vctrs.git
 Imports:
     parsedate,
     lubridate,
