--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,9 +103,16 @@ export(vec_ptype_full.partial_time)
 export(vec_ptype_full.timespan)
 export(year.partial_time)
 exportMethods(as.interval)
+importFrom(crayon,col_align)
+importFrom(crayon,col_nchar)
+importFrom(crayon,col_substring)
 importFrom(lubridate,as.interval)
 importFrom(lubridate,days_in_month)
 importFrom(lubridate,leap_year)
 importFrom(pillar,is_vector_s3)
 importFrom(pillar,pillar_shaft)
+importFrom(pillar,style_na)
+importFrom(pillar,style_subtle)
 importFrom(pillar,type_sum)
+importFrom(utils,head)
+importFrom(utils,tail)
