did minimal improvements to remove R CMD Check warnings

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: parttime
 Type: Package
 Title: A package for partial datetime format handling
-Version: 0.0.1.23
+Version: 0.0.1.24
 Authors@R: c(
     person(
         given = "Doug", 
@@ -22,7 +22,8 @@ Imports:
     pillar,
     crayon,
     vctrs,
-    utils
+    utils,
+    methods
 Suggests:
     dplyr,
     testthat,
