--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(as.logical,partial_time_logical)
 S3method(as.matrix,partial_time)
 S3method(as.timespan,default)
 S3method(c,partial_time)
+S3method(day,partial_time)
 S3method(definitely,partial_time_logical)
 S3method(dim,partial_time)
 S3method(format,partial_time)
@@ -21,6 +22,7 @@ S3method(format,partial_time_logical)
 S3method(format,pillar_shaft_partial_time)
 S3method(format,pillar_shaft_timespan)
 S3method(format,timespan)
+S3method(hour,partial_time)
 S3method(impute_time,POSIXt)
 S3method(impute_time,default)
 S3method(impute_time,matrix)
@@ -31,6 +33,8 @@ S3method(is_vector_s3,partial_time)
 S3method(is_vector_s3,timespan)
 S3method(max,partial_time)
 S3method(min,partial_time)
+S3method(minute,partial_time)
+S3method(month,partial_time)
 S3method(pillar_shaft,partial_time)
 S3method(pillar_shaft,timespan)
 S3method(pmax,default)
@@ -41,27 +45,25 @@ S3method(possibly,partial_time_logical)
 S3method(print,partial_difftime)
 S3method(print,partial_time_logical)
 S3method(rep,partial_time)
-S3method(secfrac,partial_time)
+S3method(second,partial_time)
 S3method(to_gmt,array)
 S3method(to_gmt,matrix)
 S3method(to_gmt,partial_time)
 S3method(to_gmt,timespan)
 S3method(type_sum,partial_time)
 S3method(type_sum,timespan)
-S3method(tzhour,partial_time)
-S3method(tzmin,partial_time)
+S3method(tz,partial_time)
 S3method(vec_cast.partial_time,character)
 S3method(vec_cast.partial_time,default)
 S3method(vec_cast.partial_time,matrix)
 S3method(vec_cast.timespan,array)
 S3method(vec_cast.timespan,default)
 S3method(vec_cast.timespan,partial_time)
+S3method(year,partial_time)
+export()
 export(as.parttime)
 export(as.timespan)
-export(day.partial_time)
 export(definitely)
-export(hour.partial_time)
-export(impute_partial_time_to_chr)
 export(impute_time)
 export(impute_time_max)
 export(impute_time_mid)
@@ -76,39 +78,30 @@ export(is_partial_date)
 export(is_partial_time)
 export(is_parttime)
 export(is_timespan)
-export(minute.partial_time)
-export(month.partial_time)
-export(obj_print_data.partial_time)
-export(obj_print_data.timespan)
-export(obj_print_footer.partial_time)
-export(obj_print_footer.timespan)
-export(obj_print_header.partial_time)
 export(parttime)
 export(pmax)
 export(pmin)
 export(possibly)
-export(sec.partial_time)
-export(secfrac)
-export(second.partial_time)
 export(timespan)
 export(to_gmt)
-export(tzhour)
-export(tzmin)
 export(vec_cast.logical.partial_time)
 export(vec_cast.partial_time)
 export(vec_cast.timespan)
-export(vec_ptype_abbr.partial_time)
-export(vec_ptype_abbr.timespan)
-export(vec_ptype_full.partial_time)
-export(vec_ptype_full.timespan)
-export(year.partial_time)
-exportMethods(as.interval)
 importFrom(crayon,col_align)
 importFrom(crayon,col_nchar)
 importFrom(crayon,col_substring)
 importFrom(lubridate,as.interval)
+importFrom(lubridate,day)
 importFrom(lubridate,days_in_month)
+importFrom(lubridate,hour)
 importFrom(lubridate,leap_year)
+importFrom(lubridate,minute)
+importFrom(lubridate,month)
+importFrom(lubridate,second)
+importFrom(lubridate,tz)
+importFrom(lubridate,year)
+importFrom(methods,setMethod)
+importFrom(methods,signature)
 importFrom(pillar,is_vector_s3)
 importFrom(pillar,pillar_shaft)
 importFrom(pillar,style_na)
@@ -116,3 +109,9 @@ importFrom(pillar,style_subtle)
 importFrom(pillar,type_sum)
 importFrom(utils,head)
 importFrom(utils,tail)
+importFrom(vctrs,obj_print_data)
+importFrom(vctrs,obj_print_footer)
+importFrom(vctrs,obj_print_header)
+importFrom(vctrs,stop_incompatible_cast)
+importFrom(vctrs,vec_ptype_abbr)
+importFrom(vctrs,vec_ptype_full)
