resolved R CMD Check notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,8 @@ S3method(impute_time,POSIXt)
 S3method(impute_time,default)
 S3method(impute_time,matrix)
 S3method(impute_time,partial_time)
-S3method(includes,partial_time.partial_time)
+S3method(includes,partial_time)
+S3method(includes.partial_time,partial_time)
 S3method(is.na,partial_time)
 S3method(is_vector_s3,partial_time)
 S3method(is_vector_s3,timespan)
@@ -69,7 +70,6 @@ export(impute_time_max)
 export(impute_time_mid)
 export(impute_time_min)
 export(includes)
-export(includes.partial_time)
 export(is.partial_time)
 export(is.parttime)
 export(is.timespan)
