cleaned some issues with vctrs printing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,11 @@ S3method(max,partial_time)
 S3method(min,partial_time)
 S3method(minute,partial_time)
 S3method(month,partial_time)
+S3method(obj_print_data,partial_time)
+S3method(obj_print_data,timespan)
+S3method(obj_print_footer,partial_time)
+S3method(obj_print_footer,timespan)
+S3method(obj_print_header,partial_time)
 S3method(pillar_shaft,partial_time)
 S3method(pillar_shaft,timespan)
 S3method(pmax,default)
@@ -60,6 +65,10 @@ S3method(vec_cast.partial_time,matrix)
 S3method(vec_cast.timespan,array)
 S3method(vec_cast.timespan,default)
 S3method(vec_cast.timespan,partial_time)
+S3method(vec_ptype_abbr,partial_time)
+S3method(vec_ptype_abbr,timespan)
+S3method(vec_ptype_full,partial_time)
+S3method(vec_ptype_full,timespan)
 S3method(year,partial_time)
 export()
 export(as.parttime)
