bringing up-to-date with modern vctrs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,8 +30,6 @@ S3method(impute_time,partial_time)
 S3method(includes,partial_time)
 S3method(includes.partial_time,partial_time)
 S3method(is.na,partial_time)
-S3method(is_vector_s3,partial_time)
-S3method(is_vector_s3,timespan)
 S3method(max,partial_time)
 S3method(min,partial_time)
 S3method(minute,partial_time)
@@ -59,21 +57,27 @@ S3method(to_gmt,timespan)
 S3method(type_sum,partial_time)
 S3method(type_sum,timespan)
 S3method(tz,partial_time)
+S3method(vec_cast,partial_time)
+S3method(vec_cast,timespan)
+S3method(vec_cast.logical,partial_time)
 S3method(vec_cast.partial_time,character)
 S3method(vec_cast.partial_time,default)
 S3method(vec_cast.partial_time,matrix)
-S3method(vec_cast.timespan,array)
 S3method(vec_cast.timespan,default)
+S3method(vec_cast.timespan,double)
+S3method(vec_cast.timespan,numeric)
 S3method(vec_cast.timespan,partial_time)
 S3method(vec_ptype_abbr,partial_time)
 S3method(vec_ptype_abbr,timespan)
 S3method(vec_ptype_full,partial_time)
 S3method(vec_ptype_full,timespan)
 S3method(year,partial_time)
-export()
 export(as.parttime)
 export(as.timespan)
 export(definitely)
+export(has_partial)
+export(has_partial_date)
+export(has_partial_time)
 export(impute_time)
 export(impute_time_max)
 export(impute_time_mid)
@@ -82,20 +86,18 @@ export(includes)
 export(is.partial_time)
 export(is.parttime)
 export(is.timespan)
-export(is_partial)
-export(is_partial_date)
 export(is_partial_time)
 export(is_parttime)
 export(is_timespan)
+export(is_vector_s3.partial_time)
+export(is_vector_s3.timespan)
 export(parttime)
 export(pmax)
 export(pmin)
 export(possibly)
 export(timespan)
 export(to_gmt)
-export(vec_cast.logical.partial_time)
-export(vec_cast.partial_time)
-export(vec_cast.timespan)
+exportMethods(as.interval)
 importFrom(crayon,col_align)
 importFrom(crayon,col_nchar)
 importFrom(crayon,col_substring)
@@ -109,6 +111,7 @@ importFrom(lubridate,month)
 importFrom(lubridate,second)
 importFrom(lubridate,tz)
 importFrom(lubridate,year)
+importFrom(methods,setClass)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
 importFrom(pillar,is_vector_s3)
@@ -122,5 +125,8 @@ importFrom(vctrs,obj_print_data)
 importFrom(vctrs,obj_print_footer)
 importFrom(vctrs,obj_print_header)
 importFrom(vctrs,stop_incompatible_cast)
+importFrom(vctrs,vec_cast)
+importFrom(vctrs,vec_cast.logical)
 importFrom(vctrs,vec_ptype_abbr)
 importFrom(vctrs,vec_ptype_full)
+importFrom(vctrs,vec_recycle)
