--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: parttime
 Type: Package
 Title: A package for partial datetime format handling
-Version: 0.0.1.24
+Version: 0.0.1.25
 Authors@R: c(
     person(
         given = "Doug", 
@@ -12,18 +12,16 @@ Description: A package for partial datetime format handling.
 License: Artistic-2.0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.2
 BugReports: https://www.github.com/dgkf/parttime/issues
-Remotes: 
-    git::https://github.com/r-lib/vctrs.git
 Imports:
-    parsedate,
-    lubridate,
-    pillar,
     crayon,
-    vctrs,
+    lubridate,
+    methods,
+    parsedate,
+    pillar,
     utils,
-    methods
+    vctrs (>= 0.2.0)
 Suggests:
     dplyr,
     testthat,
