Adding impute_date* family (#12)
* adding impute_date* family

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,10 @@ export(definitely)
 export(has_partial)
 export(has_partial_date)
 export(has_partial_time)
+export(impute_date)
+export(impute_date_max)
+export(impute_date_mid)
+export(impute_date_min)
 export(impute_time)
 export(impute_time_max)
 export(impute_time_mid)
