adding support for custom parsing regex/functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(is.timespan)
 export(is_partial_time)
 export(is_parttime)
 export(is_timespan)
+export(parse_to_parttime_matrix)
 export(parttime)
 export(pmax)
 export(pmin)
