--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
 BugReports: https://www.github.com/dgkf/parttime/issues
+Depends:
+    R (>= 3.6)
 Imports:
     crayon,
     lubridate,
