--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: parttime
 Type: Package
 Title: A package for partial datetime format handling
-Version: 0.0.1.27
+Version: 0.0.1.28
 Authors@R: c(
-    person(
+      person(
         given = "Doug", 
         family = "Kelkhoff", 
-        email = "kelkhoff.douglas@gene.com", 
-        role = c("aut", "cre")))
+        email = "doug.kelkhoff@gmail.com",
+        role = c("aut", "cre")
+      )
+    )
 Description: A package for partial datetime format handling.
-License: Artistic-2.0
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
