--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(as.timespan,default)
 S3method(c,partial_time)
 S3method(definitely,partial_time_logical)
 S3method(dim,partial_time)
+S3method(end,timespan)
 S3method(format,partial_time)
 S3method(format,partial_time_logical)
 S3method(format,pillar_shaft_partial_time)
@@ -32,6 +33,7 @@ S3method(impute_time,partial_time)
 S3method(includes,partial_time)
 S3method(includes.partial_time,partial_time)
 S3method(is.na,partial_time)
+S3method(is.na,timespan)
 S3method(lubridate::hour,partial_time)
 S3method(lubridate::mday,partial_time)
 S3method(lubridate::minute,partial_time)
@@ -57,6 +59,9 @@ S3method(print,partial_difftime)
 S3method(print,partial_time_logical)
 S3method(rep,partial_time)
 S3method(second,partial_time)
+S3method(start,timespan)
+S3method(stats::end,timespan)
+S3method(stats::start,timespan)
 S3method(to_gmt,array)
 S3method(to_gmt,matrix)
 S3method(to_gmt,partial_time)
@@ -75,6 +80,7 @@ S3method(vec_cast.logical,partial_time)
 S3method(vec_cast.partial_time,character)
 S3method(vec_cast.partial_time,default)
 S3method(vec_cast.partial_time,matrix)
+S3method(vec_cast.timespan,character)
 S3method(vec_cast.timespan,default)
 S3method(vec_cast.timespan,double)
 S3method(vec_cast.timespan,numeric)
