add to and rebuild docs;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ importFrom(pillar,style_na)
 importFrom(pillar,style_subtle)
 importFrom(pillar,type_sum)
 importFrom(utils,head)
+importFrom(utils,packageName)
 importFrom(utils,tail)
 importFrom(vctrs,obj_print_data)
 importFrom(vctrs,obj_print_footer)
