--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,8 @@ export(is_timespan)
 export(mday)
 export(minute)
 export(month)
+export(parse_cdisc_datetime)
+export(parse_iso8601_datetime)
 export(parse_to_parttime_matrix)
 export(parttime)
 export(pmax)
