updating S3 method registration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(impute_time,default)
 S3method(impute_time,matrix)
 S3method(impute_time,partial_time)
 S3method(includes,partial_time)
+S3method(includes,timespan)
 S3method(includes.partial_time,partial_time)
 S3method(is.na,partial_time)
 S3method(is.na,timespan)
